@@ -1,5 +1,6 @@
 lilv (0.15.0) unstable;
 
+  * Add lilv_nodes_merge().
   * Support atom:supports in lilv_port_supports_event().
   * Add va_list variant of lilv_plugin_get_num_ports_of_class().
   * Correctly depend on serd at build time (fix compilation in odd cases)
